--- a/OneCoreTest.Common/OneCoreTest.Common.csproj
+++ b/OneCoreTest.Common/OneCoreTest.Common.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\SessionConstants.cs" />
     <Compile Include="Enums\EnumExtensionMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\PasswordEncryptor.cs" />
